# gigevision_test

./: .gitignore  CMakeLists.txt  config.h.in
src/: cam_gigevision.c  cam_gigevision.h  config_cmake.h  download_xml_from_mem.c  genicam_formula.c  genicam_formula.h  genicam_ienumeration.c  genicam_ifloat.c  genicam_iinteger.c  genicam_xml.c  genicam_xml.h  gev.h  gigevision.c  gigevision.h  gigevision_cmd.h  gigevision_headers.h  gigevision_status.h  gvcp.h  gvcp_thread.c  gvcp_thread.h  gvsp_thread.h  main.c  msg_thread.h  xml_file.c  xml_file.h
test/: CMakeLists.txt  main.c
